Add resource pack metadata for mod assets